@@ -78,8 +78,8 @@ include_HEADERS = base/alloc.h base/base64.h base/builtinoflmacros.h \
 	base/setuserid.h base/sgetopt.h base/sha1.h base/sig.h base/stralloc.h \
 	base/strerr.h base/str.h base/strmsg.h base/subfd.h base/subgetopt.h \
 	base/substdio.h base/taia.h base/tai.h base/tai2.h base/timeoutread.h \
-	base/timeoutwrite.h base/typesx.h base/uint16.h base/uint32.h \
-	base/uint64.h base/wait.h base/qprintf.h array/array.h \
+	base/timeoutwrite.h base/timestamp.h base/typesx.h base/uint16.h \
+	base/uint32.h base/uint64.h base/wait.h base/qprintf.h array/array.h \
 	textcode/entities.h textcode/textcode.h base/likely.h base/iarray.h \
 	base/safemult.h base/rangecheck.h
 
@@ -134,7 +134,7 @@ COMMONSOURCES = base/alloc.c base/alloc_re.c base/base64sub.c base/byte_chr.c \
 	base/tai64n_decode.c base/tai64n_encode.c base/tai_add.c base/tai_decode.c \
 	base/tai_encode.c base/tai_now.c base/tai_pack.c base/tai_sub.c \
 	base/tai_uint.c base/tai_unpack.c base/timeoutread.c base/timeoutwrite.c \
-	base/uint16_pack.c base/uint16_read.c base/uint16_unpack.c \
+	base/timestamp.c base/uint16_pack.c base/uint16_read.c base/uint16_unpack.c \
 	base/uint32_pack.c base/uint32_read.c base/uint32_unpack.c \
 	base/wait_nohang.c base/wait_pid.c \
 	textcode/base64url.c textcode/fmt_asn1derlength.c \
