@@ -1,0 +1,14 @@
+/*
+ * $Log: timestamp.h,v $
+ * Revision 1.1  2004-09-19 18:54:21+05:30  Cprogrammer
+ * Initial revision
+ *
+ */
+#ifndef TIMESTAMP_H
+#define TIMESTAMP_H
+
+#define TIMESTAMP 25
+
+void            timestamp(char [TIMESTAMP]);
+
+#endif
