@@ -6,6 +6,10 @@ Release 1.1 Start 14/02/2021
 02. Open Build Service integration
 - 18/04/2021
 03. added date822fmt() and date822fmt.h
+- 03/05/2021
+04. added timestamp() function
+05. uint16.h, uint32.h1, uint32.h2: fixed function prototype and warning
+    -Warray-parameter
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
